<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DirectionActivity">

    <Button
        android:id="@+id/next_exhibit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="48dp"
        android:onClick="onNextBtnClicked"
        android:text="Next Exhibit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/previous_exhibit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="48dp"
        android:onClick="onPrevBtnClicked"
        android:text="Previous Exhibit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/directions_text"
        android:scrollbars="vertical"
        android:maxLines="10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="44dp"
        android:text="Directions"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/plan_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="52dp"
        android:onClick="onPlanBtnClicked"
        android:text="Plan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/exhibit_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Exhibit name and dist"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/directions_text" />

    <TextView
        android:id="@+id/directions_view"
        android:layout_width="347dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="11dp"
        android:scrollbars="vertical"
        android:text="Directions"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/skip_exhibit_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/longitude_input" />

    <Button
        android:id="@+id/skip_exhibit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:onClick="onSkipBtnClicked"
        android:text="Skip Exhibit"
        app:layout_constraintBottom_toTopOf="@+id/next_exhibit_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/latitude_input"
        android:layout_width="97dp"
        android:layout_height="31dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="latitude"
        android:inputType="numberDecimal|numberSigned"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exhibit_view" />

    <EditText
        android:id="@+id/longitude_input"
        android:layout_width="108dp"
        android:layout_height="36dp"
        android:layout_marginStart="12dp"
        android:ems="10"
        android:hint="longitude"
        android:inputType="numberDecimal|numberSigned"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/latitude_input"
        app:layout_constraintStart_toEndOf="@+id/latitude_input" />

    <Button
        android:id="@+id/apply_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:onClick="onApplyBtnClicked"
        android:text="Apply"
        app:layout_constraintBottom_toBottomOf="@+id/longitude_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/longitude_input"
        app:layout_constraintTop_toTopOf="@+id/longitude_input" />

</androidx.constraintlayout.widget.ConstraintLayout>