<resources>
    <string name="app_name">ZooSeeker</string>
    <string name="add_more_exhibits">Add more exhibits</string>
    <string name="get_directions">Get directions</string>
    <string name="plan_default">Plan (0)</string>
    <string name="default_exhibit_count">(0)</string>
    <string name="vertex_info_v1">sample_node_info.json</string>
    <string name="edge_info_v1">sample_edge_info.json</string>
    <string name="zoo_graph_v1">sample_zoo_graph.json</string>
    <string name="vertex_info_v2">sample_vertex_info_v2.json</string>
    <string name="edge_info_v2">sample_edge_info_v2.json</string>
    <string name="zoo_graph_v2">sample_zoo_graph_v2.json</string>
    <string name="vertex_info">sample_vertex_info_v2.json</string>
    <string name="edge_info">sample_edge_info_v2.json</string>
    <string name="zoo_graph">sample_zoo_graph_v2.json</string>
    <string name="detailed_dir">Detailed directions</string>
    <string name="gps">GPS</string>
</resources>