<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">


    <androidx.appcompat.widget.Toolbar
        android:windowActionBar="true"
        android:id="@+id/navi_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@android:color/white">


        <androidx.appcompat.widget.SearchView
            android:id="@+id/nav_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="-16dp"
            app:iconifiedByDefault="false"
            app:queryHint="Search for animals here..."
            app:searchIcon="@null"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="4dp">

        </androidx.appcompat.widget.SearchView>
    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_item"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navi_toolbar" />


</androidx.constraintlayout.widget.ConstraintLayout>